python-web-server/tests/http/requests/invalid/prefix_01.py
from web_server.http.errors import InvalidRequestMethod

request = InvalidRequestMethod
